BUGFIXING: text below payment methods in detail page collapse when text is too big

--- a/includes/css/less/bootstrap/variables.less
+++ b/includes/css/less/bootstrap/variables.less
@@ -80,7 +80,7 @@
 //## Specify custom location and filename of the included Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
 //** Load fonts from this directory.
-@icon-font-path:          "/new-portada/includes/fonts/"; // /new-portada
+@icon-font-path:          "/includes/fonts/"; // /new-portada
 //** File name for all font files.
 @icon-font-name:          "glyphicons-halflings-regular";
 //** Element ID within SVG icon file.
