--- a/includes/css/less/detail.less
+++ b/includes/css/less/detail.less
@@ -665,14 +665,16 @@ body {
     
     .secure-text {
       background-color: @blanco;
-      bottom: -10px;
+      top: 95%;
       color: @gris_claro;
       font-size: 11px;
       position: absolute;
       left: 50%;
       padding: 0 10px;
+      text-align: center;
       .transform(translateX(-50%));
-      white-space: nowrap;
+      width: 95%;
+      margin: 0;
     }
   }
 
