--- a/includes/css/less/reset.less
+++ b/includes/css/less/reset.less
@@ -1,29 +1,29 @@
 @font-face {
   font-family: 'Titillium Web';
   font-weight: 400;
-  src: url('/new-portada/includes/fonts/TitilliumWeb-Regular.eot'); /* IE9 Compat Modes */ // /new-portada
-  src: url('/new-portada/includes/fonts/TitilliumWeb-Regular.eot?#iefix') format('embedded-opentype'),
-    url('/new-portada/includes/fonts/TitilliumWeb-Regular.ttf') format('truetype'),
-    url('/new-portada/includes/fonts/TitilliumWeb-Regular.woff') format('woff'),
-    url('/new-portada/includes/fonts/TitilliumWeb-Regular.otf') format('otf');
+  src: url('/includes/fonts/TitilliumWeb-Regular.eot'); /* IE9 Compat Modes */ // /new-portada
+  src: url('/includes/fonts/TitilliumWeb-Regular.eot?#iefix') format('embedded-opentype'),
+    url('/includes/fonts/TitilliumWeb-Regular.ttf') format('truetype'),
+    url('/includes/fonts/TitilliumWeb-Regular.woff') format('woff'),
+    url('/includes/fonts/TitilliumWeb-Regular.otf') format('otf');
 }
 @font-face {
   font-family: 'Titillium Web';
   font-weight: 300;
-  src: url('/new-portada/includes/fonts/TitilliumWeb-Light.eot'); /* IE9 Compat Modes */
-  src: url('/new-portada/includes/fonts/TitilliumWeb-Light.eot?#iefix') format('embedded-opentype'),
-    url('/new-portada/includes/fonts/TitilliumWeb-Light.ttf') format('truetype'),
-    url('/new-portada/includes/fonts/TitilliumWeb-Light.woff') format('woff'),
-    url('/new-portada/includes/fonts/TitilliumWeb-Light.otf') format('otf');
+  src: url('/includes/fonts/TitilliumWeb-Light.eot'); /* IE9 Compat Modes */
+  src: url('/includes/fonts/TitilliumWeb-Light.eot?#iefix') format('embedded-opentype'),
+    url('/includes/fonts/TitilliumWeb-Light.ttf') format('truetype'),
+    url('/includes/fonts/TitilliumWeb-Light.woff') format('woff'),
+    url('/includes/fonts/TitilliumWeb-Light.otf') format('otf');
 }
 @font-face {
   font-family: 'Titillium Web';
   font-weight: 700;
-  src: url('/new-portada/includes/fonts/TitilliumWeb-Bold.eot'); /* IE9 Compat Modes */
-  src: url('/new-portada/includes/fonts/TitilliumWeb-Bold.eot?#iefix') format('embedded-opentype'),
-    url('/new-portada/includes/fonts/TitilliumWeb-Bold.ttf') format('truetype'),
-    url('/new-portada/includes/fonts/TitilliumWeb-Bold.woff') format('woff'),
-    url('/new-portada/includes/fonts/TitilliumWeb-Bold.otf') format('otf');
+  src: url('/includes/fonts/TitilliumWeb-Bold.eot'); /* IE9 Compat Modes */
+  src: url('/includes/fonts/TitilliumWeb-Bold.eot?#iefix') format('embedded-opentype'),
+    url('/includes/fonts/TitilliumWeb-Bold.ttf') format('truetype'),
+    url('/includes/fonts/TitilliumWeb-Bold.woff') format('woff'),
+    url('/includes/fonts/TitilliumWeb-Bold.otf') format('otf');
 }
 
 * {
